important refactor of goods_types_organization controller, no longer repeating functions between needs/offers controllers (these now only deal with their respective index views) re-styled all forms in dashboard for better consistency, alignment, and viewability adjusted routes for cards vs needs/offers new/update routes

--- a/app/assets/stylesheets/dashboard.scss
+++ b/app/assets/stylesheets/dashboard.scss
@@ -3,11 +3,11 @@ section.org-show {
 
   width: 100vw;
   padding-top: 2em;
-
-  div.need-offer-form,
-  div.org-form {
-    width: 80vw;
-    margin-left: 10vw;
+  div.dashboard-form {
+    border: 1px dotted gray;
+    width: 81vw;
+    margin: auto;
+    padding: 5px;
   }
   .org-edit {
     .org-image {
